objects/AR_User_Story__mdt.object
<CustomObject>
    <fields>
        <fullName>AR_User_Story__c</fullName>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>AR User Story</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Grade</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                    <label>A</label>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Personal Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Test_num__c</fullName>
        <label>Test_num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <label>Today</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>AR User Story</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isTrue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>isTrue</description>
        <inlineHelpText>AR User Story</inlineHelpText>
        <label>isTrue</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>